# notion-word-data

./: .env  .gitignore  LICENSE  README.md  SUPPORTED_LANGUAGES.md  WORDS.md  pyproject.toml
notion_word_data/: app.py  errors.py  logs.py  notion.py  utils.py  word_data.py
tests/: test_app.py  test_notion.py  test_notion_word_data.py  test_utils.py  test_word_data.py
